--- a/about-us.html
+++ b/about-us.html
@@ -83,10 +83,10 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="#">
+														<a class="dropdown-toggle nav-link" href="expertise.html">
 															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!-- <ul class="dropdown-menu">
 															<li>
 																<a class="dropdown-item" href="accompagnement.html">
 																	Accompagnement
@@ -97,7 +97,7 @@
 																	Financement
 																</a>
 															</li>
-														</ul>
+														</ul> -->
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
@@ -160,67 +160,9 @@
 				<div class="container">
 					<div class="row pt-1 pb-4 mb-3">
 						<div class="col">
-							<!-- <ul>
-								<li class="lead mb-4">Vous êtes jeune diplômé et vous avez des idées de projets très innovantes et à forte valeur ajoutée ;</li>
-								<li class="lead mb-4">Vous vous êtes récemment lancés ou vous souhaitez vous lancer dans un projet de création d'entreprise ? </li>
-								<li class="lead mb-4">Vous souhaitez vous entourer de l'expertise nécessaire et vous donner les moyens financiers
-								adéquats pour renforcer le décollage de votre projet ?</li>
-								<li class="lead mb-4">Vous êtes entrepreneur avec une expérience avérée dans votre secteur d'activité et vous avez des
-								idées innovantes pour améliorer votre productivité et accroitre votre marché,</li>
-							</ul>
 
-							<p>Le Fonds d'Appui Catalytique et de Solidarité (FACS), un programme de financement et d 'accompagne-
-								ment des entrepreneur(e)s créé par la Chambre de Commerce et d'Industrie du Bénin (CCI Bénin) et la
-								Caisse des Dépôts et de Consignations du Bénin (CDC Bénin) vous apporte la solution.
-								Le FACS a pour objectif de faire émerger une nouvelle génération d'entrepreneurs champions, capables
-								de développer des entreprises à forte valeur ajoutée et de catalyser la transformation productive de
-								l'économie béninoise.</p>
-								<p>Le programme offrira aux entrepreneur(e)s sélectionné(e)s un financement en fonds propres et quasi -
-								fonds propres, pouvant aller jusqu'à 200 millions en contrepartie d'une participation minoritaire, et un
-								accompagnement stratégique et opérationnel, pré investissement et post investissement.</p>
-								
-								<p>Pour être éligible au programme FACS, il faut : </p>
-								<ul>
-									<li>Avoir un projet de création d'entreprise ou une entreprise en amorçage (moins de 5 ans) ou en crois-
-									sance qui justifie d'une expérience avérée en lien avec le secteur d'activité cible ;</li>
-									<li>Avoir un marché profond et/ou en forte croissance dans les secteurs de l'agriculture, de la petite
-									industrie et des services aux Bâtiments et Travaux Publics ;</li>
-									<li>Avoir des projections financières à horizon 5-6 ans ;</li>
-								</ul>
-								<p>Pour en savoir plus, nous vous invitons à assister à une présentation du programme le mercredi 25
-								mai 2022 à partir de 10h00 au siège de la CCIB à Cotonou et dans toutes ses antennes sur le territoire
-								national (Porto Novo, Parakou, Lokossa, Abomey, Natitingou). Pour ceux qui ne pourront pas se dépla-
-								cer, nous avons prévu un accès par visioconférence afin de suivre l'événement et interagir en direct à
-								travers un lien qui leur sera communiqué à travers les réseaux sociaux LinkedIn @xxxxxxxx et Face-
-								book, auxquelles nous vous invitons à vous abonner. Veuillez également consulter le
-								site du programme FACS : https://www.entrepreneur-champion-facs.bj pour en savoir plus.</p>
-								<p>Cordialement,
-								Le Secrétariat Exécutif du FACS</p>
-
-								<div class="row pb-4">
-									<h3>Création d'entrepreneurs champions</h3>
-									<div class="col-lg-6">
-										<ul class="list list-icons list-icons-style-3 list-tertiary">
-											<li><i class="fas fa-chevron-right"></i> <b>POSITIONNEMENT</b><br>
-												Le Fonds d'Appui Catalytique et de Solidarité est un programme d'accompagnement
-												et de financement :
-												<ul>
-													<li>d'entreprises innovantes (start up), en amorçage ou en croissance;</li>
-													<li>de projets ambitieux et à fort potentiel de croissance dans les secteurs de l'agriculture de la petite industrie et des services aux Bâtiments et Travaux Publics</li></ul></li>
-											<li><i class="fas fa-chevron-right"></i>
-												<b>MODE D'INTERVENTION</b><br>
-												Prise de participation dans des sociétés— projets au stade de création (< 1an) ou en
-	amorçage (< 5 ans) ou en croissance (indifférent)
-											</li>
-										</ul>	
-									</div> -->
-									<!--div class="col-lg-4">
-										<ul class="list list-icons list-icons-style-3 list-tertiary">
-											<li><i class="fas fa-chevron-right"></i> Real Estate Professionals</li>
-											<li><i class="fas fa-chevron-right"></i> Chartered Financial Analysts</li>
-										</ul>
-									</div-->
 									<div class="row pb-4">
+										<h3>Objectif</h3>
 										<p>Le Fonds d'Appui Catalytique et de Solidarité (FACS), est un programme d'accompagnement et de financement des entreprises, co-créé par la Chambre de Commerce et d'Industrie du Bénin (CCI Bénin) et la Caisse des Dépôts et de Consignations du Bénin (CDC Bénin) pour apporter une solution à la difficulté d'accès au financement des entreprises innovantes et à forte valeur ajoutée</p>
 										<p>De façon spécifique, le FACS vise à</p>
 										<ul class="ps-5">
@@ -230,7 +172,8 @@
 											<li>financer des projets structurés et innovants portés par des start up que par des entreprises déjà établies, en amorçage ou en croissance et les accompagner pour la levée de financements complémentaires adaptés à leur besoin.</li>
 											<li>construire des relations avec les souscripteurs, donateurs, partenaires et différentes parties prenantes et,  à ce titre,  faciliter le dialogue avec ces derniers.</li>
 										</ul>
-										<h3>Création d'entrepreneurs champions</h3>
+										<h3>CONTENU DU PROGRAMME</h3>
+										<!-- <h3>Création d'entrepreneurs champions</h3> -->
 										<div class="col-lg-6">
 											<ul class="list list-icons list-icons-style-3 list-tertiary">
 												<li><i class="fas fa-chevron-right"></i> <b>POSITIONNEMENT</b><br>
