--- a/expertise.html
+++ b/expertise.html
@@ -83,10 +83,10 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="#">
+														<a class="dropdown-toggle nav-link" href="expertise.html">
 															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!-- <ul class="dropdown-menu">
 															<li>
 																<a class="dropdown-item" href="accompagnement.html">
 																	Accompagnement
@@ -97,7 +97,7 @@
 																	Financement
 																</a>
 															</li>
-														</ul>
+														</ul> -->
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
@@ -144,7 +144,8 @@
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>Missions</h1>
+								<!-- <h1>Missions</h1> -->
+								<h1>CRÉATION D'ENTREPRENEURS CHAMPIONS</h1>
 								<span class="d-block text-4">Que faisons-nous</span>
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
@@ -160,91 +161,63 @@
 				<div class="container">
 					<div class="row pt-1 pb-5 mb-3">
 						<div class="col">
-							<div class="row mb-3">
-								<div class="col">
-									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
-										<div class="feature-box-icon">
-											<img src="img/avatars/avatar-money.png" alt="">
-										</div>
-										<div class="feature-box-info ms-3">
-											<h4 class="font-weight-normal text-5">Corporate Finance</h4>
-											<p class="text-2">Renforcement du business plan et des hypothèses sous-jacentes en amont de l'investissement</p>
-											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row mb-3">
-								<div class="col">
-									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
-										<div class="feature-box-icon">
-											<img src="img/avatars/avatar-money.png" alt="">
-										</div>
-										<div class="feature-box-info ms-3">
-											<h4 class="font-weight-normal text-5">Corp Restructuring</h4>
-											<p class="text-2">Offre financière se basant sur un mécanisme de valorisation flexible et « Entrepreneur Friendly » permettant d'aligner les intérêts de CDG Invest et des Entrepreneurs via divers mécanismes comme la relution de ces derniers au capital de la société en cas de surperformance</p>
-											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row mb-3">
-								<div class="col">
-									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
-										<div class="feature-box-icon">
-											<img src="img/avatars/avatar-money.png" alt="">
-										</div>
-										<div class="feature-box-info ms-3">
-											<h4 class="font-weight-normal text-5">Economic Consulting</h4>
-											<p class="text-2">Investissement jusqu'à 20 MDHS en fonds propres et quasi-fonds propres étalé sur toute la durée d'investissement, permettant de sécuriser les besoins d'investissement futurs et prédictibles de la société, sous réserve de l'atteinte d'objectifs déterminés ou de la réalisation de conditions suspensives</p>
-											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row mb-3">
-								<div class="col">
-									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
-										<div class="feature-box-icon">
-											<img src="img/avatars/avatar-money.png" alt="">
-										</div>
-										<div class="feature-box-info ms-3">
-											<h4 class="font-weight-normal text-5">Litigation Consulting</h4>
-											<p class="text-2">Recherche de financement complémentaire sans caution personnelle et de subventions au cas par cas.</p>
-											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row mb-3">
-								<div class="col">
-									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
-										<div class="feature-box-icon">
-											<img src="img/avatars/avatar-money.png" alt="">
-										</div>
-										<div class="feature-box-info ms-3">
-											<h4 class="font-weight-normal text-5">Strategic Consulting</h4>
-											<p class="text-2">Introduction de Best Practices et aide à la mise en place d'outils de reporting et de gestion adaptés</p>
-											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col">
-									<div class="feature-box custom-feature-box custom-feature-box-active feature-box-style-2">
-										<div class="feature-box-icon">
-											<img src="img/avatars/avatar-money.png" alt="">
-										</div>
-										<div class="feature-box-info ms-3">
-											<h4 class="font-weight-normal text-5">Tech Consulting</h4>
-											<p class="text-2">Les règles de gouvernance seront explicitées dans le cadre d'un Pacte d'Actionnaires qui comportera (i) des clauses relatives à la gestion de la Société; (ii) des clauses relatives à l'actionnariat et aux cessions de titres; (iii) des clauses relatives à la sortie d'un actionnaire et (iv) des clauses relatives à la rupture du pacte.</p>
-											<a href="expertise-detail.html">Read More <i class="fas fa-long-arrow-alt-right"></i></a>
+							<div class="container">
+								<div class="row pt-1 pb-4 mb-3">
+									<div class="col">
+										<div class="row mt-4">
+											<div class="">
+												<h3>Accompagnement</h3>
+												<p>A l'issue de la phase de présélection (avant le comité d'investissement), nous accompagnons les Entrepreneurs dans le renforcement de leur projet et construisons ensemble une feuille de route opérationnelle et stratégique. L'accompagnement est composé de plusieurs types d'appuis techniques et stratégiques dont notamment</p>
+												<ul class="list list-icons list-icons-style-3 list-tertiary p-2">
+													<li><i class="fas fa-chevron-right"></i> Affinement du Plan d'Affaires intégrant le contrôle de qualité des hypothèses et données de base des projections et de l'analyse des risques ;</li>
+													<li><i class="fas fa-chevron-right"></i> Structuration d'un financement adapté et mise en place d'un mécanisme de décaissement flexible permettant d'allier les intérêts du promoteur et des actionnaires ;</li>
+													<li><i class="fas fa-chevron-right"></i> Recherche de financement complémentaire sans exigence de caution et de subvention, le cas échéant ;</li>
+													<li><i class="fas fa-chevron-right"></i> Assistance des entreprises sur les problématiques relatives au pilotage opérationnel adéquat ;</li>
+													<li><i class="fas fa-chevron-right"></i> Identification permanente des opportunités/relais de croissance et solutions de mitigation des risques ;</li>
+													<li><i class="fas fa-chevron-right"></i> Mise à disposition d'experts dédiés selon la(les) problématiques à résoudre ;</li>
+													<li><i class="fas fa-chevron-right"></i> Mise à disposition d'experts dédiés (dans un rôle de conseiller opérationnel) et participation au conseil d'administration ;</li>
+													<li><i class="fas fa-chevron-right"></i> Introduction de Best Practices et aide à la mise en place d'outils de reporting et de gestion adaptés ;</li>
+													<li><i class="fas fa-chevron-right"></i> Veille technologiques et règlementaires ;</li>
+													<li><i class="fas fa-chevron-right"></i> Etc.</li>
+												</ul>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 
+							<div class="container">
+								<div class="row pt-1 pb-4 mb-3">
+									<div class="col">
+										<div class="row mt-4">
+											<div class="">
+												<h3>Financement</h3>
+
+												<p>Le financement se fait sous la forme d'Investissement en fonds propres et quasi-fonds propres jusqu'à hauteur de deux cents millions (200.000.000) de francs CFA</p>
+												<ul class="list list-icons list-icons-style-3 list-tertiary p-2">
+													<li>
+														<i class="fas fa-chevron-right"></i> Les règles de gouvernance seront explicitées dans le cadre d'un Pacte d'Actionnaires qui comportera
+														<ul style="list-style-type:lower-roman;">
+															<li>des clauses relatives à la gestion de la Société ;</li>
+															<li>des clauses relatives à l'actionnariat et aux cessions de titres ;</li>
+															<li>des clauses relatives à la sortie d'un actionnaire et ;</li>
+															<li>des clauses relatives à la rupture du pacte.</li>
+														</ul>
+													</li>
+													<li>
+														<i class="fas fa-chevron-right"></i> 2 organes de gouvernance conférant à CDC Bénin un rôle de minoritaire influent, permettant d'apporter toute l'assistance et l'expertise d'investisseurs au bénéfice des Entrepreneurs. Il s'agit notamment de : 
+														<ul>
+															<li>Le Conseil d'Administration ou équivalent</li>
+															<li>Un comité matérialisant le mécanisme de suivi, qui sera mis en place en concertation avec le promoteur</li>
+														</ul>
+													</li>
+													<li><i class="fas fa-chevron-right"></i> dentification sur toute la durée d'investissement de relais de croissance (diversification du portefeuille produits/services, nouveaux marchés géographiques, croissance externe)</li>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
