--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="#">
+														<a class="dropdown-toggle nav-link" href="expertise.html">
 															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!-- <ul class="dropdown-menu">
 															<li>
 																<a class="dropdown-item" href="accompagnement.html">
 																	Accompagnement
@@ -102,7 +102,7 @@
 																	Financement
 																</a>
 															</li>
-														</ul>
+														</ul> -->
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
@@ -153,7 +153,7 @@
 									<div class="row align-items-center pb-5 h-100">
 										<div class="col">
 											<h1 class="custom-secondary-font text-color-light font-weight-extra-bold text-8 line-height-1 line-height-sm-3 mb-5 appear-animation" data-appear-animation="fadeInLeftShorterPlus" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Accompagnement<br><span class="custom-secondary-font text-4-5">D'entrepreneurs</span></h1>
-											<a href="about-us.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">COMMENCER</a>
+											<a href="tertimonials.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">LIRE L'APPEL A CHAMPION</a>
 										</div>
 									</div>
 								</div>
@@ -164,7 +164,7 @@
 									<div class="row align-items-center pb-5 h-100">
 										<div class="col">
 											<h1 class="custom-secondary-font text-color-light font-weight-extra-bold text-8 line-height-1 line-height-sm-3 mb-5 appear-animation" data-appear-animation="fadeInLeftShorterPlus" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Appel à candidature<br><span class="custom-secondary-font text-4-5">C'est le moment de vous lancer</span></h1>
-											<a href="about-us.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">COMMENCER</a>
+											<a href="tertimonials.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">LIRE L'APPEL A CHAMPION</a>
 										</div>
 									</div>
 								</div>
@@ -175,7 +175,7 @@
 									<div class="row align-items-center pb-5 h-100">
 										<div class="col">
 											<h1 class="custom-secondary-font text-color-light font-weight-extra-bold text-8 line-height-1 line-height-sm-3 mb-5 appear-animation" data-appear-animation="fadeInLeftShorterPlus" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Financement<br><span class="custom-secondary-font text-4-5">Projets Ambitieux</span></h1>
-											<a href="about-us.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">COMMENCER</a>
+											<a href="tertimonials.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">LIRE L'APPEL A CHAMPION</a>
 										</div>
 									</div>
 								</div>
@@ -312,7 +312,7 @@
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
-								<a href="accompagnement.html" class="text-decoration-none appear-animation" data-appear-animation="fadeInUp" data-appear-animation-delay="0">
+								<a href="expertise.html" class="text-decoration-none appear-animation" data-appear-animation="fadeInUp" data-appear-animation-delay="0">
 									<div class="feature-box custom-feature-box feature-box-style-2">
 										<div class="feature-box-icon">
 											<img src="img/avatars/avatar-money.png" alt="">
@@ -326,7 +326,7 @@
 								</a>
 							</div>
 							<div class="col-lg-6">
-								<a href="financement.html" class="text-decoration-none appear-animation" data-appear-animation="fadeInUp" data-appear-animation-delay="100">
+								<a href="expertise.html" class="text-decoration-none appear-animation" data-appear-animation="fadeInUp" data-appear-animation-delay="100">
 									<div class="feature-box custom-feature-box feature-box-style-2">
 										<div class="feature-box-icon">
 											<img src="img/avatars/avatar-money.png" alt="">
@@ -487,14 +487,14 @@
 										<div class="card-header">
 											<h4 class="card-title m-0">
 												<a class="accordion-toggle collapsed" data-bs-toggle="collapse" data-bs-parent="#accordion7" href="#collapse7Four1" aria-expanded="false">
-													Pellentesque in ex molestie, convallis nulla ut, ornare erat.
+													Pellentesque in ex molestie, convallis nulla ut.
 													<span class="custom-accordion-plus"></span>
 												</a>
 											</h4>
 										</div>
 										<div id="collapse7Four1" class="collapse" aria-expanded="false" style="height: 0px;">
 											<div class="card-body">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt, auctor ullamcorper risus luctus.</p>
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat ex finibus urna tincidunt.</p>
 											</div>
 										</div>
 									</div>
@@ -502,7 +502,7 @@
 										<div class="card-header">
 											<h4 class="card-title m-0">
 												<a class="accordion-toggle collapsed" data-bs-toggle="collapse" data-bs-parent="#accordion7" href="#collapse7Four2" aria-expanded="false">
-													Pellentesque in ex molestie, convallis nulla ut, ornare erat.
+													Pellentesque in ex molestie, convallis nulla ut.
 													<span class="custom-accordion-plus"></span>
 												</a>
 											</h4>
@@ -517,7 +517,7 @@
 										<div class="card-header">
 											<h4 class="card-title m-0">
 												<a class="accordion-toggle collapsed" data-bs-toggle="collapse" data-bs-parent="#accordion7" href="#collapse7Four4" aria-expanded="false">
-													Pellentesque in ex molestie, convallis nulla ut, ornare erat.
+													Pellentesque in ex molestie, convallis nulla ut.
 													<span class="custom-accordion-plus"></span>
 												</a>
 											</h4>
@@ -532,7 +532,7 @@
 										<div class="card-header">
 											<h4 class="card-title m-0">
 												<a class="accordion-toggle collapsed" data-bs-toggle="collapse" data-bs-parent="#accordion7" href="#collapse7Four5" aria-expanded="false">
-													Pellentesque in ex molestie, convallis nulla ut, ornare erat.
+													Pellentesque in ex molestie, convallis nulla ut.
 													<span class="custom-accordion-plus"></span>
 												</a>
 											</h4>
