--- a/team-detail.html
+++ b/team-detail.html
@@ -83,10 +83,10 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="#">
+														<a class="dropdown-toggle nav-link" href="expertise.html">
 															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!-- <ul class="dropdown-menu">
 															<li>
 																<a class="dropdown-item" href="accompagnement.html">
 																	Accompagnement
@@ -97,7 +97,7 @@
 																	Financement
 																</a>
 															</li>
-														</ul>
+														</ul> -->
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
