--- a/tertimonials.html
+++ b/tertimonials.html
@@ -83,10 +83,10 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="#">
+														<a class="dropdown-toggle nav-link" href="expertise.html">
 															Missions
 														</a>
-														<ul class="dropdown-menu">
+														<!-- <ul class="dropdown-menu">
 															<li>
 																<a class="dropdown-item" href="accompagnement.html">
 																	Accompagnement
@@ -97,7 +97,7 @@
 																	Financement
 																</a>
 															</li>
-														</ul>
+														</ul> -->
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
@@ -156,7 +156,52 @@
 						</div>
 					</div>
 				</section>
+				<div class="container">
+					<div class="row pt-1 pb-4 mb-3">
+						<div class="col">
+							<ul>
+								<li class="lead mb-4">Vous êtes jeune diplômé et vous avez des idées de projets très innovantes et à forte valeur ajoutée ;</li>
+								<li class="lead mb-4">Vous vous êtes récemment lancés ou vous souhaitez vous lancer dans un projet de création d'entreprise ? </li>
+								<li class="lead mb-4">Vous souhaitez vous entourer de l'expertise nécessaire et vous donner les moyens financiers
+								adéquats pour renforcer le décollage de votre projet ?</li>
+								<li class="lead mb-4">Vous êtes entrepreneur avec une expérience avérée dans votre secteur d'activité et vous avez des
+								idées innovantes pour améliorer votre productivité et accroitre votre marché,</li>
+							</ul>
 
+								<p>
+								Le Fonds d'Appui Catalytique et de Solidarité (FACS), un programme de financement et d 'accompagne-
+								ment des entrepreneur(e)s créé par la Chambre de Commerce et d'Industrie du Bénin (CCI Bénin) et la
+								Caisse des Dépôts et de Consignations du Bénin (CDC Bénin) vous apporte la solution.
+								Le FACS a pour objectif de faire émerger une nouvelle génération d'entrepreneurs champions, capables
+								de développer des entreprises à forte valeur ajoutée et de catalyser la transformation productive de
+								l'économie béninoise.
+								</p>
+								<p>Le programme offrira aux entrepreneur(e)s sélectionné(e)s un financement en fonds propres et quasi -
+								fonds propres, pouvant aller jusqu'à 200 millions en contrepartie d'une participation minoritaire, et un
+								accompagnement stratégique et opérationnel, pré investissement et post investissement.
+								</p>
+								
+								<p>Pour être éligible au programme FACS, il faut : </p>
+								<ul>
+									<li>Avoir un projet de création d'entreprise ou une entreprise en amorçage (moins de 5 ans) ou en crois-
+									sance qui justifie d'une expérience avérée en lien avec le secteur d'activité cible ;</li>
+									<li>Avoir un marché profond et/ou en forte croissance dans les secteurs de l'agriculture, de la petite
+									industrie et des services aux Bâtiments et Travaux Publics ;</li>
+									<li>Avoir des projections financières à horizon 5-6 ans ;</li>
+								</ul>
+								<p>Pour en savoir plus, nous vous invitons à assister à une présentation du programme le mercredi 25
+								mai 2022 à partir de 10h00 au siège de la CCIB à Cotonou et dans toutes ses antennes sur le territoire
+								national (Porto Novo, Parakou, Lokossa, Abomey, Natitingou). Pour ceux qui ne pourront pas se dépla-
+								cer, nous avons prévu un accès par visioconférence afin de suivre l'événement et interagir en direct à
+								travers un lien qui leur sera communiqué à travers les réseaux sociaux LinkedIn @xxxxxxxx et Face-
+								book, auxquelles nous vous invitons à vous abonner. Veuillez également consulter le
+								site du programme FACS : https://www.entrepreneur-champion-facs.bj pour en savoir plus.</p>
+								<p>Cordialement,
+								Le Secrétariat Exécutif du FACS</p>
+							</div>
+						</div>
+					</div>
+				</div>
 				<section class="section section-text-light section-background m-0" style="background: url('img/gallery/wp.png'); background-size: cover;">
 					<div class="container">
 						<div class="row justify-content-md-center">
