--- a/tertimonials.html
+++ b/tertimonials.html
@@ -144,8 +144,8 @@
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>Financement</h1>
-								<span class="d-block text-4">Postuler pour un financement</span>
+								<h1>Appel à champions</h1>
+								<span class="d-block text-4 deadline">La date de clôture de cet appel est <em class="text-warning fw-bold">29/07/22</em></span>
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
