--- a/tertimonials.html
+++ b/tertimonials.html
@@ -160,14 +160,11 @@
 					<div class="row pt-1 pb-4 mb-3">
 						<div class="col">
 							<ul>
-								<li class="lead mb-4">Vous êtes jeune diplômé et vous avez des idées de projets très innovantes et à forte valeur ajoutée ;</li>
-								<li class="lead mb-4">Vous vous êtes récemment lancés ou vous souhaitez vous lancer dans un projet de création d'entreprise ? </li>
-								<li class="lead mb-4">Vous souhaitez vous entourer de l'expertise nécessaire et vous donner les moyens financiers
-								adéquats pour renforcer le décollage de votre projet ?</li>
-								<li class="lead mb-4">Vous êtes entrepreneur avec une expérience avérée dans votre secteur d'activité et vous avez des
-								idées innovantes pour améliorer votre productivité et accroitre votre marché,</li>
+								<li class="lead mb-4 text-4">Vous êtes jeune diplômé et vous avez des idées de projets très innovantes et à forte valeur ajoutée ;</li>
+								<li class="lead mb-4 text-4">Vous vous êtes récemment lancés ou vous souhaitez vous lancer dans un projet de création d'entreprise ? </li>
+								<li class="lead mb-4 text-4">Vous souhaitez vous entourer de l'expertise nécessaire et vous donner les moyens financiers adéquats pour renforcer le décollage de votre projet ?</li>
+								<li class="lead mb-4 text-4">Vous êtes entrepreneur avec une expérience avérée dans votre secteur d'activité et vous avez des idées innovantes pour améliorer votre productivité et accroitre votre marché,</li>
 							</ul>
-
 								<p>
 								Le Fonds d'Appui Catalytique et de Solidarité (FACS), un programme de financement et d 'accompagne-
 								ment des entrepreneur(e)s créé par la Chambre de Commerce et d'Industrie du Bénin (CCI Bénin) et la
@@ -183,16 +180,14 @@
 								
 								<p>Pour être éligible au programme FACS, il faut : </p>
 								<ul>
-									<li>Avoir un projet de création d'entreprise ou une entreprise en amorçage (moins de 5 ans) ou en crois-
-									sance qui justifie d'une expérience avérée en lien avec le secteur d'activité cible ;</li>
+									<li>Avoir un projet de création d'entreprise ou une entreprise en amorçage (moins de 5 ans) ou en croissance qui justifie d'une expérience avérée en lien avec le secteur d'activité cible ;</li>
 									<li>Avoir un marché profond et/ou en forte croissance dans les secteurs de l'agriculture, de la petite
 									industrie et des services aux Bâtiments et Travaux Publics ;</li>
 									<li>Avoir des projections financières à horizon 5-6 ans ;</li>
 								</ul>
 								<p>Pour en savoir plus, nous vous invitons à assister à une présentation du programme le mercredi 25
 								mai 2022 à partir de 10h00 au siège de la CCIB à Cotonou et dans toutes ses antennes sur le territoire
-								national (Porto Novo, Parakou, Lokossa, Abomey, Natitingou). Pour ceux qui ne pourront pas se dépla-
-								cer, nous avons prévu un accès par visioconférence afin de suivre l'événement et interagir en direct à
+								national (Porto Novo, Parakou, Lokossa, Abomey, Natitingou). Pour ceux qui ne pourront pas se déplacer, nous avons prévu un accès par visioconférence afin de suivre l'événement et interagir en direct à
 								travers un lien qui leur sera communiqué à travers les réseaux sociaux LinkedIn @xxxxxxxx et Face-
 								book, auxquelles nous vous invitons à vous abonner. Veuillez également consulter le
 								site du programme FACS : https://www.entrepreneur-champion-facs.bj pour en savoir plus.</p>
